<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PM</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="circleButton">Circle</string>
    <string name="item_check_result">Проверка</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="not_repeated_elements">Не повторять элементы</string>
    <string name="voice_rb">Голос</string>
    <string name="playing_card_rb">Карты</string>
    <string name="type_numbs_two">00-99</string>
    <string name="type_numbs_three">000-999</string>
    <string name="distract_check_equation">Проверить</string>
    <string name="set_answer_add_numb">Добавить</string>
    <string name="set_answer_edit_numb">Число</string>

</resources>
