<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="180dp"
    android:layout_height="match_parent"
    android:background="@drawable/drawer_choose_memory">

    <ImageButton
        android:id="@+id/MstartButton"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_centerInParent="true"
        android:background="@drawable/selector_circle_start_m"
        android:src="@drawable/small_net_m_icon" />

    <!--<TextView-->
        <!--android:id="@+id/loadLineDrawer"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="4dp"-->
        <!--android:layout_toLeftOf="@+id/MstartButton"-->
        <!--android:layout_centerVertical="true"-->
        <!--android:background="@color/fb_grey"-->
        <!--android:visibility="visible" />-->


    <EditText
        android:padding="2dp"
        android:id="@+id/setElementsAmountEditView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="4dp"
        android:background="@drawable/rectangle_white"
        android:gravity="center"
        android:hint="Кол-во элементов"
        android:inputType="number"
        android:maxLength="4"
        android:textColor="@color/fb_text_edit_text"
        android:textColorHint="@color/fb_text_edit_hint"
        android:textSize="12sp" />

    <CheckBox
        android:id="@+id/allowTimeCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setElementsAmountEditView"
        android:checked="false" />

    <EditText
        android:enabled="false"
        android:padding="2dp"
        android:layout_alignBaseline="@+id/allowTimeCheckBox"
        android:layout_toRightOf="@id/allowTimeCheckBox"
        android:layout_marginRight="4dp"
        android:id="@+id/setElementsShowTimeEditView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setElementsAmountEditView"
        android:background="@drawable/rectangle_white"
        android:gravity="center_vertical|left"
        android:hint="Время на элемент, мс"
        android:inputType="number"
        android:maxLength="5"
        android:textColorHint="@color/fb_text_edit_hint"
        android:textColor="@color/fb_text_edit_text"
        android:textSize="12sp" />



    <RadioGroup
        android:layout_gravity="right"
        android:inputType="number"
        android:id="@+id/memoryTypeRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/allowTimeCheckBox"
        android:checkedButton="@+id/twoNumbs"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/twoNumbs"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:checked="true"
            android:text="@string/type_numbs_two"
            android:textColor="@color/fb_text_white"
            android:textSize="12sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/threeNumbs"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:text="@string/type_numbs_three"
            android:textColor="@color/fb_text_white"
            android:textSize="12sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/Cards"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:text="@string/playing_card_rb"
            android:textColor="@color/fb_text_white"
            android:textSize="12sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/Voice"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:text="@string/voice_rb"
            android:textColor="@color/fb_text_white"
            android:textSize="12sp"
            android:textStyle="bold" />
    </RadioGroup>

    <!--<CheckBox-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@id/memoryTypeRadioGroup"-->
        <!--android:layout_marginTop="4dp"-->
        <!--android:text="@string/not_repeated_elements"-->
        <!--android:textColor="@color/fb_text_grey"-->
        <!--android:textSize="12sp"-->
        <!--android:textStyle="italic" />-->

</RelativeLayout>